# agents

./: .env.example  .gitignore  LICENSE  README.md  crew_example.py  pyproject.toml  requirements.txt  run_crew.py  simple_bedrock_example.py  test_bedrock.py  test_crew.py
crews/: README.md
crews/code_development/: agent.code_reviewer.yaml  agent.coding_assistant.yaml  agent.testing_agent.yaml  crew.code_development.yaml  task.implement_task.yaml  task.review_task.yaml  task.test_task.yaml
crews/example/: agent.coder.yaml  agent.functionality_tester.yaml  agent.performance_tester.yaml  agent.security_tester.yaml  agent.test_analyzer.yaml  agent.validation_tester.yaml  crew.example.yaml  task.analyze_results.yaml  task.coding_task.yaml  task.functionality_test.yaml  task.performance_review.yaml  task.security_review.yaml  task.validation_test.yaml
