[project]
name = "crewai-agents"
version = "0.1.0"
description = "CrewAI agents with AWS Bedrock Nova Micro"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-aws>=1.2.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "langchain-core>=1.2.0",
]

# No build system needed for script-only project

[dependency-groups]
dev = [
    # Add development dependencies here if needed
]

[project.optional-dependencies]
crewai = [
    "crewai>=0.11.0",  # Requires Rust compiler for tiktoken
]